src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Perceived_Customer_Satisfaction__c</fullName>
        <label>Perceived Customer Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Case__c</fullName>
        <formula>IF(

OR(
ISPICKVAL(Origin, &apos;Phone&apos;),
ISPICKVAL(Origin, &apos;Chat&apos;),
NOT(ISBLANK(Call_ID__c))), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Previously_Opened_with_Optum__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This issue was also previously opened with optum support.</description>
        <inlineHelpText>This issue was also previously opened with optum support.</inlineHelpText>
        <label>Previously Opened with Optum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_to_Fire__c</fullName>
        <label>Process to Fire</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1_NPS_Formula__c</fullName>
        <formula>IF(

OR(
Q1_NPS_Score_Field__c = 10,
Q1_NPS_Score_Field__c = 9
), 1, 

IF(

OR(
Q1_NPS_Score_Field__c = 0,
Q1_NPS_Score_Field__c = 1,
Q1_NPS_Score_Field__c = 2,
Q1_NPS_Score_Field__c = 3,
Q1_NPS_Score_Field__c = 4,
Q1_NPS_Score_Field__c = 5,
Q1_NPS_Score_Field__c = 6
), -1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 NPS Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_NPS_Response_Score__c</fullName>
        <label>Q1 NPS Response Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1_NPS_Score_Field__c</fullName>
        <formula>Value(Q1_NPS_Response_Score__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1 NPS Score Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_NPS_Formula__c</fullName>
        <formula>IF(

OR(
Q2_NPS_Score_Field__c = 10,
Q2_NPS_Score_Field__c = 9
), 1, 

IF(

OR(
Q2_NPS_Score_Field__c = 0,
Q2_NPS_Score_Field__c = 1,
Q2_NPS_Score_Field__c = 2,
Q2_NPS_Score_Field__c = 3,
Q2_NPS_Score_Field__c = 4,
Q2_NPS_Score_Field__c = 5,
Q2_NPS_Score_Field__c = 6
), -1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2 NPS Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_NPS_Response_Score__c</fullName>
        <label>Q2 NPS Response Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q2_NPS_Score_Field__c</fullName>
        <formula>Value(Q2_NPS_Response_Score__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2 NPS Score Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Queue_Duration__c</fullName>
        <label>Queue Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Queued_At_Offset__c</fullName>
        <formula>Queued_At__c + (420/1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queued At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Queued_At__c</fullName>
        <label>Queued At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rally_Fulfilled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Rally will not be billing back a partner for reimbursement, please check this box.</inlineHelpText>
        <label>Paid by Rally?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rally_Number__c</fullName>
        <label>Rally Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rally_UID__c</fullName>
        <formula>Contact.Rally_UID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rally UID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rally_User_Name_Formula__c</fullName>
        <formula>IF(
NOT(ISBLANK(ContactId)), Contact.Rally_User_Name__c, Rally_User_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rally User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rally_User_Name__c</fullName>
        <label>Rally User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rally_Worthy_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Would you want our CEO to hear this call?</inlineHelpText>
        <label>Rally-Worthy Call?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Review__c</fullName>
        <description>If the contact is flagged for review, the reason will populate here.</description>
        <label>Reason for Review</label>
        <picklist>
            <picklistValues>
                <fullName>Inappropriate language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact not authorized</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>IF(
NOT(ISBLANK(RecordTypeId)), RecordType.Name, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_from_NPS_Formula__c</fullName>
        <formula>IF(

Remove_from_NPS__c = true, true,

IF(

ISPICKVAL(Status,&apos;Transferred to Optum&apos;), true, false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remove from NPS Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remove_from_NPS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This removes cases from NPS reporting.</description>
        <inlineHelpText>This removes cases from NPS reporting.</inlineHelpText>
        <label>Remove from NPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Details__c</fullName>
        <label>Resolution Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>Educated and/or navigated user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acted on account using Rally tools to resolve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directed user to HR or employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred or directed to BCBSSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred or directed to MHTK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred or directed to Optum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred or directed to Excellus / Univera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred or directed to UHC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred or directed to Health Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred or directed to Mercer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred or directed to HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advised user that Rally engineering resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advised user that Optum engineering resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used Rally tools to resolve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred to Optum to be resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needed Rally Engineering to resolve</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retail_Value__c</fullName>
        <label>Retail Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revocation_Date__c</fullName>
        <description>HIPAA revocation date</description>
        <label>Revocation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rewards_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Case:Description includes &quot;ignore&quot;. See Workflow Rules:Rewards Test</description>
        <inlineHelpText>Checked if Case:Description includes &quot;ignore&quot;</inlineHelpText>
        <label>Rewards Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <picklist>
            <picklistValues>
                <fullName>As Designed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Live_Agent_Transcript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Live Agent Transcript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shared_with_Optum__c</fullName>
        <formula>IF(
OR(
Optum_Escalated__c = true,
CreatedById = &apos;005E0000006KjB0&apos;), true, false)</formula>
        <label>Shared with Optum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UHC IMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life and Disability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Step_1__c</fullName>
        <label>Category - Step 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_2__c</fullName>
        <label>Step 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_3__c</fullName>
        <label>Step 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Origin__c</fullName>
        <label>Sub-Origin</label>
        <picklist>
            <controllingField>Origin</controllingField>
            <picklistValues>
                <fullName>Consumer Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UHC Client Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Beta</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thread_ID__c</fullName>
        <label>Thread ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_On_Hold__c</fullName>
        <label>Time On Hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent in the hands of the customer.</description>
        <inlineHelpText>The time in business hours that this case spent in the hands of the customer.</inlineHelpText>
        <label>Time With Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent with support.</description>
        <inlineHelpText>The time in business hours that this case spent with support.</inlineHelpText>
        <label>Time With Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Tier_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent in the hands of RUSH Tier 1.</description>
        <inlineHelpText>The time in business hours that this case spent in the hands of RUSH Tier 1.</inlineHelpText>
        <label>Time With Tier 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Tier_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent with RUSH Tier 2.</description>
        <inlineHelpText>The time in business hours that this case spent with RUSH Tier 2.</inlineHelpText>
        <label>Time With Tier 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_with_Client_Team__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time with Client Team</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_with_Eng_Dev__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time with Eng/Dev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_with_Optum__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time with Optum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Address__c</fullName>
        <label>To Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_New_Cases__c</fullName>
        <description>**DO NOT EDIT - USED FOR REPORT HEADER FOR OPTUM**</description>
        <formula>&apos;Rally Health&apos;</formula>
        <label>Total New Cases</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfered_To__c</fullName>
        <label>Transfered To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferred_to_Optum_Date__c</fullName>
        <description>Date status changed to &apos;Transferred&apos;</description>
        <label>Transferred to Optum Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unread_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unread Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_Escalation__c</fullName>
        <inlineHelpText>Was this a valid escalation from RSS to ERT?</inlineHelpText>
        <label>Valid Escalation?</label>
        <picklist>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InComm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GiftCards.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year_Closed__c</fullName>
        <formula>Text(Year(ClosedDateGMT__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Opened__c</fullName>
        <formula>Text(Year(CreatedDateGMT__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Opened</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Client_Support_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Client_Support</value>
        </filters>
        <label>All Client Support Cases</label>
        <sharedTo>
            <role>Client_Support</role>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Empties</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.LAST_UPDATE_DATE_ONLY</field>
            <operation>lessThan</operation>
            <value>1/4/2017 12:00 AM</value>
        </filters>
        <filters>
            <field>Consumer_Case__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Engage,Case.Choice</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notContain</operation>
            <value>rmaho,emasi,kbubl,pending,aroth,client,marketing,cases,follow,kshap</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Assigned</value>
        </filters>
        <label>Empties</label>
        <sharedTo>
            <role>CSR_Think_Tank</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Follow_Up_Needed_Case</fullName>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Contact_Name__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>JIRA__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Sub_Origin__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Follow Up Needed - Engage</label>
        <queue>Follow_Up_Needed_Engage</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Follow_Up_Needed_Case1</fullName>
        <filterScope>Queue</filterScope>
        <label>Follow Up Needed</label>
        <queue>Follow_Up_Needed</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Follow_Up_Needed_Choice_Case</fullName>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>JIRA__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Follow Up Needed - Choice</label>
        <queue>Follow_Up_Needed_Choice</queue>
        <sharedTo>
            <role>System_Administrator</role>
            <roleAndSubordinatesInternal>CSR_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Follow_Up_Needed_Connect_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Follow Up Needed - Connect</label>
        <queue>Follow_Up_Needed_Connect</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Exceptions_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>IT Exceptions</label>
        <queue>IT_Exceptions</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Internal_Cases_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Internal Cases</label>
        <queue>Internal_Cases</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marketing_Bounces_Case</fullName>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Filtered_Subject_Term__c</columns>
        <columns>To_Address__c</columns>
        <columns>Sub_Origin__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>Email__c</columns>
        <filterScope>Queue</filterScope>
        <label>Marketing Bounces</label>
        <queue>Marketing_Bounces</queue>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Marlene_s_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Marlene</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Resolved,Closed - No Response,Transferred,Closed - Unauthenticated</value>
        </filters>
        <label>Marlene&apos;s Cases</label>
        <sharedTo>
            <role>CSR_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Cases</fullName>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Comments__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>JIRA__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Cases Assigned To Me</label>
        <sharedTo>
            <group>CSR</group>
            <role>CSR_Associate</role>
            <role>CSR_Manager</role>
            <role>CSR_Think_Tank</role>
            <role>CSR_Tier_2</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_CasesNew</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsOwner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>New_Cases_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Sub_Origin__c</columns>
        <filterScope>Queue</filterScope>
        <label>New Cases - Engage</label>
        <queue>New_Cases_Engage</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Cases_Case445</fullName>
        <filterScope>Queue</filterScope>
        <label>New Cases</label>
        <queue>New_Cases</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Cases_Choice_Case</fullName>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <label>New Cases - Choice</label>
        <queue>New_Cases_Choice</queue>
        <sharedTo>
            <group>CSR</group>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Choice</fullName>
        <active>true</active>
        <businessProcess>CSR - Choice</businessProcess>
        <label>Choice</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client_Support</fullName>
        <active>true</active>
        <businessProcess>Client Support</businessProcess>
        <label>Client Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Connect</fullName>
        <active>true</active>
        <businessProcess>CSR - Engage</businessProcess>
        <label>Connect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Digital_Health_Plan</fullName>
        <active>true</active>
        <businessProcess>CSR - Engage</businessProcess>
        <label>Digital Health Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Engage</fullName>
        <active>true</active>
        <businessProcess>CSR - Engage</businessProcess>
        <label>Engage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Exception</fullName>
        <active>true</active>
        <businessProcess>CSR - Engage</businessProcess>
        <label>Exception</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Rewards</fullName>
        <active>true</active>
        <businessProcess>Internal Rewards</businessProcess>
        <label>Internal Rewards</label>
    </recordTypes>
    <recordTypes>
        <fullName>No_Reply</fullName>
        <active>true</active>
        <businessProcess>CSR - Tier 2</businessProcess>
        <description>No Reply Marketing responses.</description>
        <label>No Reply</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tier_2</fullName>
        <active>true</active>
        <businessProcess>CSR - Tier 2</businessProcess>
        <label>Tier 2</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Case_Owner_Lockdown</fullName>
        <active>false</active>
        <description>You can only edit the status of a Case that you own. Please change owner to yourself and try again.</description>
        <errorConditionFormula>AND( 
OwnerId != $User.Id, 
$User.Id != &apos;005E0000005u8CI&apos;,/*Alex&apos;s User*/
$User.Id != &apos;005E00000066LOg&apos;,/*Guest User for Webform*/
ISCHANGED(Status), 
NOT(ISNEW()))</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>You can only edit the status of a Case that you own. Please change the Case owner to yourself and try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Category_Required_for_Close</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
RecordType.Name &lt;&gt; &apos;Tier 2&apos;,
$User.ProfileId &lt;&gt; &apos;00eE0000000VOcx&apos;,
ISPICKVAL(Status,&apos;Closed - Resolved&apos;), 
ISBLANK(Category_Step_1__c))</errorConditionFormula>
        <errorMessage>Category information is required before case close. Please add categories on the case page layout component and then re-close. Thanks!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rally_ID_Needed_on_Close</fullName>
        <active>true</active>
        <description>Fires when a case is closed without a proper ID related.</description>
        <errorConditionFormula>AND( 
$Profile.Id &lt;&gt; &apos;00eE0000000VOcx&apos;,
RecordType.Name &lt;&gt; &apos;Client Support&apos;, 
ISPICKVAL(Status,&apos;Closed - Resolved&apos;), 
ISBLANK(Contact.Rally_UID__c),
NOT(ISPICKVAL(Origin,&apos;Integrated Case - Rally&apos;)), 

			OR(	
							AND(
											NOT(ISBLANK(Affiliation_Formula__c)),
											Affiliation_Formula__c &lt;&gt; &apos;N/A&apos;,
											Affiliation_Formula__c &lt;&gt; &apos;Unknown&apos;,
											Affiliation_Formula__c &lt;&gt; &apos;n/a&apos;,
											Affiliation_Formula__c &lt;&gt; &apos;unknown&apos;), 
							AND(
											NOT(ISBLANK(Rally_User_Name_Formula__c)), 
											Rally_User_Name_Formula__c &lt;&gt; &apos;N/A&apos;,
											Rally_User_Name_Formula__c &lt;&gt; &apos;Unknown&apos;,
											Rally_User_Name_Formula__c &lt;&gt; &apos;n/a&apos;,
											Rally_User_Name_Formula__c &lt;&gt; &apos;unknown&apos;)
			)
)</errorConditionFormula>
        <errorMessage>Whoops! Please make sure this contact has a Rally ID before closing this Case!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Lockdown</fullName>
        <active>true</active>
        <description>Locks statuses that are needed in the Recordtype but shouldn&apos;t be accessible to Tier 1 Customer Support agents.</description>
        <errorConditionFormula>AND( 

$UserRole.Name = &apos;CSR Associate&apos;, 

OR( 

ISPICKVAL(Status,&apos;Pending Tier 2 (Assigned)&apos;), 
ISPICKVAL(Status,&apos;Pending Client Team&apos;), 
ISPICKVAL(Status,&apos;Pending Eng/Dev&apos;), 
ISPICKVAL(Status,&apos;Pending Optum&apos;), 
ISPICKVAL(Status,&apos;New Optum&apos;), 
ISPICKVAL(Status,&apos;Optum Replied&apos;)))</errorConditionFormula>
        <errorMessage>You cannot set this Case Status value, please change the Case Status and save again.</errorMessage>
    </validationRules>
</CustomObject>